--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dev_dependencies:
   flutter_svg: ^0.23.0+1
   timer_builder: ^2.0.0
   intl: ^0.17.0
+  loading_animations: ^2.2.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
