--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   geolocator: ^7.7.1
+  geocoding: ^2.0.1
   http: ^0.13.3
   google_fonts: ^2.1.0
   flutter_svg: ^0.23.0+1
